<resources>
	<string name="app_name">CoinSecure Mockup</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>
	<string name="amount_to_send">Amount to send</string>
	<string name="in_rupees">In Rupees</string>
	<string name="select_an_option">Touch here to select an option</string>
	<string name="send_capitals">SEND</string>
	<string name="bitcoin">Bitcoin</string>
	<string name="bitcoin_dummy_value">0.0404</string>
	<string name="rupees_dummy_value">1,155.78</string>
	<string name="dummy_fragment">Dummy Fragment</string>
	<string name="bits">BITS</string>
	<string name="btc">BTC</string>
	<string name="account">ACCOUNT</string>
	<string name="total">Total</string>
	<string name="almost_equal">≈</string>
</resources>
