<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context="io.github.rakshakhegde.coinsecuremockup.MainActivity">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/AppTheme.PopupOverlay"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:orientation="horizontal"
			android:weightSum="2">

			<EditText
				android:id="@+id/et_bitcoin"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:hint="@string/bitcoin"
				android:inputType="numberDecimal"
				android:text="@string/bitcoin_dummy_value"/>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_weight="0"
				android:background="@drawable/curved_rectangle"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/tv_bits"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:padding="8dp"
					android:text="@string/bits"/>

				<TextView
					android:id="@+id/tv_btc"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/fill_curved_rectangle"
					android:gravity="center_horizontal"
					android:padding="8dp"
					android:text="@string/btc"
					android:textColor="@color/colorPrimaryDark"/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:orientation="horizontal"
			android:weightSum="2">

			<EditText
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:hint="@string/in_rupees"
				android:inputType="numberDecimal"
				android:text="@string/rupees_dummy_value"/>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_weight="0"
				android:background="@drawable/curved_rectangle"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/tv_account"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/fill_curved_rectangle"
					android:gravity="center_horizontal"
					android:padding="8dp"
					android:text="@string/account"
					android:textColor="@color/colorPrimaryDark"/>

				<TextView
					android:id="@+id/tv_total"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:padding="8dp"
					android:text="@string/total"/>
			</LinearLayout>
		</LinearLayout>

	</android.support.design.widget.AppBarLayout>

	<include layout="@layout/content_main"/>

</android.support.design.widget.CoordinatorLayout>
