<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="8dp">

		<ImageView
			android:id="@+id/iv_bitcoin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:padding="12dp"
			android:src="@drawable/bitcoin"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/et_send_bitcoin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignTop="@id/iv_bitcoin"
			android:layout_toEndOf="@id/iv_bitcoin"
			android:layout_toRightOf="@id/iv_bitcoin">

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/amount_to_send"
				android:inputType="numberDecimal"/>
		</android.support.design.widget.TextInputLayout>

		<ImageView
			android:id="@+id/iv_rupee"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/iv_bitcoin"
			android:layout_marginTop="8dp"
			android:padding="12dp"
			android:src="@drawable/rupee"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/et_in_rupees"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignTop="@id/iv_rupee"
			android:layout_below="@id/et_send_bitcoin"
			android:layout_toEndOf="@id/iv_rupee"
			android:layout_toRightOf="@id/iv_rupee">

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/in_rupees"
				android:inputType="numberDecimal"/>
		</android.support.design.widget.TextInputLayout>

		<ImageView
			android:id="@+id/person"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/et_in_rupees"
			android:layout_marginTop="8dp"
			android:padding="4dp"
			android:src="@drawable/person"/>

		<ImageView
			android:id="@+id/qr_code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:layout_alignTop="@id/person"
			android:layout_below="@id/et_in_rupees"
			android:layout_margin="12dp"
			android:src="@drawable/qr_code"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/et_select_option"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignTop="@id/person"
			android:layout_below="@id/et_in_rupees"
			android:layout_toEndOf="@id/person"
			android:layout_toLeftOf="@id/qr_code"
			android:layout_toRightOf="@id/person"
			android:layout_toStartOf="@id/qr_code">

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/select_an_option"/>
		</android.support.design.widget.TextInputLayout>
	</RelativeLayout>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		android:background="?attr/selectableItemBackground"
		android:drawablePadding="8dp"
		android:drawableTop="@drawable/send"
		android:padding="8dp"
		android:text="@string/send_capitals"/>
</FrameLayout>